[package]
name = "interviews-services_nsherred"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-rt = "2.4.0"
actix-web = "4.3.1"
serde = { version = "1.0.156", features = ["derive","rc"] }
serde_json = "1.0.94"
